// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "gitlab.inspr.dev/inspr/core/pkg/meta";

import "meta.proto";

package meta;

// The Channel service definition.22
service ChannelOperator {
  // Performs a Channel create operation
  rpc CreateChannel (Channel) returns (channelReply) {}

  // Performs a Channel delete operation
  rpc DeleteChannel (channelDescription) returns (channelReply) {}

  // Performs a Channel update operation
  rpc UpdateChannel (channelWithDescription) returns (channelReply) {}

  // Performs a Channel search / recover operation
  rpc GetChannel (channelDescription) returns (Channel) {}

  // Performs a Channel list operation
  rpc ListChannels (stub) returns (channelDescriptionArray) {}
}

// The request message containing and array of Channel description
message channelDescriptionArray {
    repeated Channel channelDescription = 1;
}

// The request message containing the Channel description
message channelWithDescription {
    string channelDescription = 1;
    Channel targetChannel = 2;
}

// The request message containing the Channel description
message channelDescription {
    string channelDescription = 1;
}

// The response message containing the response
message channelReply {
  string error = 1;
  string value = 2;
}
