// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package comunication;

// The App service definition.
service Operator {
  // Performs a App create operation
  rpc CreateApp (appDescription) returns (appReply) {}

  // Performs a App de;ete operation
  rpc DeleteApp (appID) returns (appReply) {}

  // Performs a App update operation
  rpc UpdateApp (app) returns (appReply) {}

  // Performs a App search / recover operation
  rpc GetApp (appID) returns (appDescription) {}

  // Performs a App list operation
  rpc ListApps (stub) returns (appDescriptionArray) {}
}

// A stub message to search data
message stub {}

// The request message containing the App description and its ID
message app {
    string name = 1;
    string appDescription = 2;
}

// The request message containing and array of App description
message appDescriptionArray {
    repeated string appDescription = 1;
}

// The request message containing the App description
message appDescription {
    string appDescription = 1;
}

// The request message containing the App ID
message appID {
    string name = 1;
}

// The response message containing the response
message appReply {
  string error = 1;
  string value = 2;
}
